--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,16 @@
 li {
     cursor: pointer;
+    padding: 0px 8px;
+    border: 2px solid black;
+    background: rgba(0,0,0,0.2);
+}
+
+ul {
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+}
+
+.selected {
+    background-color: white;
 }
