--- a/src/style.css
+++ b/src/style.css
@@ -31,3 +31,14 @@ ul {
     box-shadow: 10px 5px 15px darkgray;
     background-color: rgb(255 255 255 / 28%);
 }
+
+.menus {
+    background-color: white;
+    border: 2px solid black;
+}
+
+.menu {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
